deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-k8s
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
        - name: hello-k8s
          image: edw-crtn/hello-k8s:initial
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
